@@ -1,0 +1,3 @@
+<h1>Recuperación de alerta</h1>
+
+Define si Pandora FMS lanza otra alerta cuando la condición de la alerta se recupera. Tiene el mismo «campo1» pero añade «[RECOVER]]» al «campo2» y al «campo3». De forma predeterminada está desactivada.
