@@ -1,0 +1,25 @@
+<h1>Constructor de mapas</h1>
+
+Para crear un mapa primero debe rellenar el formulario proporcionando:
+<ul>
+	<li>Un nombre</li>
+	<li>Un grupo</li>
+	<li>Una imagen de fondo</li>
+	<li>Un tamaño (anchura/altura)</li>
+</ul>
+Una vez que lo haya rellenado, pusle «Actualizar» para que se cargue el mapa.
+<br /><br />
+Para añadir elementos al mapa, vaya al formulario debajo de la imagen de fondo y rellénelo, proporcionando para cada elemento:
+<ul>
+	<li>Una etiqueta y un color para ella</li>
+	<li>Un tipo: una imagen estática de tres colores o un módulo de gráfico</li>
+	<li>El agente del que provvendrán los datos</li>
+	<li>El módulo del agente</li>
+	<li>El periodo de actualización</li>
+	<li>La imagen para el elemento</li>
+	<li>Un padre, en caso de que quiera que el elemento sea hijo (esté enlazado) con otro elemento</li>
+	<li>Un mapa enlazado, en caso de que quiera enlazar el mapa con otro.</li>
+</ul>
+Para editar las propiedades de un elemento ya creado, simplemente arrastre el elemento al formulario «EDITOR DE ELEMENTOS» y suéltelo allí, el formulario cargará las propiedades del elemento.
+<br /><br />
+Para borrar un elemento del mapa, simplemente arrástrelo a la papelera de reciclaje. Después pulse «Borrar».
