@@ -1,0 +1,7 @@
+<h1>Definición de módulo</h1>
+
+Existen dos modos para un agente:
+<ul>
+    <li>Modo aprendizaje: todos los módulos enviados por el agente se aceptan. Si los módulos no están definidos, el sistema los creará automáticamente. Se recomienda activar los agentes en este modo y cambiarlo una vez que se el operador se ha familiarizado con Pandora FMS.</li>
+    <li>Modo normal: los módulos en este modo se deben configurar manualmente. No se permite la definición automática en este modo.</li>
+</ul>
